test/FAIL/loadcmd/to_many_arguments/01_test_load.emu
#-#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="to many arguments"
#-------

load boucle.o 0x1000 hello
